--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,18 @@
   color: #61dafb;
 }
 
+.react-calendar .OOO {
+  background: #D2686E;
+}
+
+.react-calendar .ACTIVE {
+  background: #9EE3B4;
+}
+
+.react-calendar .IDLE {
+  background: #F3E496;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
